cc_library(
    name = "core_t",
    srcs = [
        "lapi.c",
        "lcode.c",
        "lctype.c",
        "ldebug.c",
        "ldo.c",
        "ldump.c",
        "lfunc.c",
        "lgc.c",
        "llex.c",
        "lmem.c",
        "lobject.c",
        "lopcodes.c",
        "lparser.c",
        "lstate.c",
        "lstring.c",
        "ltable.c",
        "ltests.c",
        "ltm.c",
        "lundump.c",
        "lvm.c",
        "lzio.c",
    ],
    hdrs = [
        "lapi.h",
        "lauxlib.h",
        "lcode.h",
        "lctype.h",
        "ldebug.h",
        "ldo.h",
        "lfunc.h",
        "lgc.h",
        "llex.h",
        "llimits.h",
        "lmem.h",
        "lobject.h",
        "lopcodes.h",
        "lopnames.h",
        "lparser.h",
        "lprefix.h",
        "lstate.h",
        "lstring.h",
        "ltable.h",
        "ltm.h",
        "lua.h",
        "luaconf.h",
        "lualib.h",
        "lundump.h",
        "lvm.h",
        "lzio.h",
    ],
)

cc_library(
    name = "aux_t",
    srcs = [
        "lauxlib.c",
    ],
    hdrs = [
        "lauxlib.h",
        "lprefix.h",
        "lua.h",
        "luaconf.h",
        "lualib.h",
    ],
)

cc_library(
    name = "lib_o",
    srcs = [
        "lbaselib.c",
        "lcorolib.c",
        "ldblib.c",
        "linit.c",
        "liolib.c",
        "lmathlib.c",
        "loadlib.c",
        "loslib.c",
        "lstrlib.c",
        "ltablib.c",
        "lutf8lib.c",
    ],
    hdrs = [
        "lauxlib.h",
        "lprefix.h",
        "lua.h",
        "luaconf.h",
        "lualib.h",
    ],
)

cc_library(
    name = "liblua",
    visibility = ["//visibility:public"],
    deps = [
        ":aux_t",
        ":core_t",
        ":lib_o",
    ],
)
